Modal input height adjusted to fix blurry borders

--- a/client/src/styles/_modal.scss
+++ b/client/src/styles/_modal.scss
@@ -25,7 +25,7 @@
 }
 
 .modal-content {
-  // width: 25rem;
+  max-width: 28.8rem;
   margin: 2.4rem 4rem 3.2rem 4rem;
 }
 
@@ -72,11 +72,12 @@
 }
 .modal .field-input {
   background-color: #171717;
-  border: 0.1rem solid #252932;
+  border: 1px solid #252932;
+  height: 43px;
   width: 100%;
   color: white;
   text-align: left;
-  font-size: 1.6rem;
+  font-size: 1.8rem;
   padding: 0.8rem 1.2rem;
   transition: border-color 0.2s ease, padding 0.3s ease-out;
 
@@ -95,7 +96,7 @@
     color: #3a4150;
   }
   &:focus {
-    border: 1px solid $primary-color;
+    border-color: $primary-color;
     padding-left: 1.2rem;
   }
   //   margin-bottom: 25px;
